new version update

--- a/data/boolean_network/CCM_mod4_1.cfg
+++ b/data/boolean_network/CCM_mod4_1.cfg
@@ -146,7 +146,7 @@ Ulk1_2.istate=0;
 LossSignals.istate=0;
 mTORC1.istate=0;
 HIF.istate=0;
-//Glucose.istate=0;
+Glucose.istate=1;
 //Wnt.istate=0;
 Hypoxia.istate=0;
 Autophagy.istate=0;
