--- a/data/boolean_network/CCM_mod4_1.cfg
+++ b/data/boolean_network/CCM_mod4_1.cfg
@@ -105,7 +105,7 @@ $d_Single=1;
 //EMTreg.istate=0;
 
 Integrins.istate=0;
-//DNAdamage.istate=0;
+DNAdamage.istate=0;
 EGFR.istate=0;
 Migration.istate=0;
 actin_mobil.istate=0;
