added phase color, removed useless variable in xml files

--- a/data/boolean_network/CCM_mod4_1.cfg
+++ b/data/boolean_network/CCM_mod4_1.cfg
@@ -126,7 +126,7 @@ Cell_growth.istate=0;
 Cell_cell.istate=0;
 MMPs.istate=0;
 Matrix_modif.istate=0;
-//TGFbeta.istate=0;
+TGFbeta.istate=0;
 Cell_polarization.istate=0;
 AKT_CC_TFs.istate=0;
 PI3K.istate=0;
