update model, fixed GUI bugs

--- a/data/boolean_network/CCM_mod4_1.cfg
+++ b/data/boolean_network/CCM_mod4_1.cfg
@@ -120,7 +120,7 @@ AKT2.istate=0;
 ERK_pthw.istate=0;
 miRNA.istate=0;
 Ecadh.istate=0;
-//GF.istate=0;
+GF.istate=1;
 //ECM_sensing.istate=0;
 Cell_growth.istate=0;
 Cell_cell.istate=0;
@@ -132,13 +132,13 @@ AKT_CC_TFs.istate=0;
 PI3K.istate=0;
 Matrix_adhesion.istate=0;
 SMAD_pthw.istate=0;
-//Neighbours.istate=0;
-//Nei2.istate=0;
+Neighbours.istate=1;
+Nei2.istate=1;
 Mat_Adh_jun.istate=0;
 Cell_freeze.istate=0;
 Ncadh.istate=0;
 GLUT.istate=0;
-//Oxy.istate=0;
+Oxy.istate=1;
 Canonic_metab.istate=0;
 LowATP_metab.istate=0;
 Quiescence.istate=0;
@@ -263,16 +263,16 @@ ERK_pthw.is_internal = 1;
 miRNA.is_internal = 1;
 Ecadh.is_internal = 1;
 GF.is_internal = 1;
-ECM_sensing.is_internal = 1;
+ECM_sensing.is_internal = 0;
 Cell_growth.is_internal = 0;
 Cell_cell.is_internal = 0;
 MMPs.is_internal = 1;
 Matrix_modif.is_internal = 0;
-TGFbeta.is_internal = 1;
-Cell_polarization.is_internal = 0;
+TGFbeta.is_internal = 0;
+Cell_polarization.is_internal = 1;
 AKT_CC_TFs.is_internal = 1;
 PI3K.is_internal = 1;
-Matrix_adhesion.is_internal = 0;
+Matrix_adhesion.is_internal = 1;
 SMAD_pthw.is_internal = 1;
 Neighbours.is_internal = 1;
 Nei2.is_internal = 1;
